Costruzione parte biglietto

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,60 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* 
+    Regole Comuni 
+*/
+.t_up{
+    text-transform: uppercase;
+}
+.t_al-c {
+    text-align: center;
+}
+.d-flex {
+    display: flex;
+}
+.justify_between {
+    justify-content: space-between;
+}
+/* 
+    Corpo Pagina
+*/
+body {
+    background-color: rgb(249, 143, 143);
+}
+main {
+    width: 80%;
+    margin: auto;
+}
+main h1 {
+    padding-top: 30px;
+}
+h1 {
+    color: #fff;
+}
+#ticket_display,
+#calc_ticket {
+    border: 2px solid #000;
+    padding: 30px 70px;
+    margin-top: 30px;
+    text-align: center;
+    border-radius: 15px;
+}
+
+label[for="nome passeggero"],
+label[for="fascia eta"],
+label[for="distanza p"] {
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    padding-bottom: 15px;
+    font-size: 18px;
+}
+
+
+.btn {
+    margin: 70px 10px 50px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 18px;
+}
