--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,11 @@
     Corpo Pagina
 */
 body {
-    background-color: rgb(249, 143, 143);
+    background-image: linear-gradient(to right top, #ff0000, #d2001f, #a20027, #710826, #420f1d, #420f1d, #24080f, #420f1d, #710826, #a20027, #d2001f, #ff0000);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Open Sans', sans-serif;
+    height: 100vh;
 }
 main {
     width: 80%;
@@ -39,6 +43,14 @@ main h1 {
 }
 h1 {
     color: #fff;
+    text-shadow: 3px 3px 5px #000000;
+    font-size: 28px;
+}
+
+#ticket_display {
+    height: 275px;
+    display: flex;
+    align-items: center;
 }
 
 #ticket_display,
@@ -48,6 +60,8 @@ h1 {
     margin-top: 30px;
     text-align: center;
     border-radius: 15px;
+    background-color: #ffffff98;
+    box-shadow: 4px 5px 8px #363636;
 }
 
 label[for="nome passeggero"],
@@ -56,37 +70,69 @@ label[for="distanza p"] {
     display: block;
     text-align: center;
     font-weight: bold;
-    padding-bottom: 15px;
+    padding-bottom: 30px;
     font-size: 18px;
 }
 
 
 .btn {
     margin: 70px 10px 50px;
-    padding: 5px 10px;
+    padding: 5px 20px;
     border-radius: 10px;
     font-size: 18px;
+    box-shadow: 4px 3px 8px #24080f;
+
 }
 
-input {
-    width: 250px;
+input,
+select {
+    width: 220px;
+    padding: 5px 10px;
+    border-radius: 25px;
+    border: 2px solid;
+    box-shadow: 4px 3px 8px #24080f;
 }
-
+label {
+    text-shadow: 1px 2px 2px #585858;
+}
 ul {
     width: 80%;
+    border-top: 1.5px solid #000;
+    border-bottom: 1.5px solid #000;
 }
 ul li {
     list-style-type: none;
     text-align: left;
+    padding: 30px 15px 142px 20px;
+}
+#nameP,
+ul li p {
+    padding-top: 80px;
+    margin-bottom: -100px;
 }
 
 #passenger_name-data {
-    border: #000 2px solid;
-    margin: 5px 100px 9px 0px;
-    padding: 30px 15px 142px 20px;
-    width: 30%;
+
+    padding: 30px 0 0;
+    width: 25%;
+    background-color: rgb(21, 21, 21);
+    color: white;
 }
 
 #container_ticket {
-    padding: 30px;
+    padding: 0 30px;
+    width: 100%;
+}
+
+
+h4 {
+    font-size: 18px;
+}
+
+
+#ticket_generator {
+    display: none;
+}
+.show {
+    display: block!important;
 }
