--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 /* 
     Regole Comuni 
 */
+.fs-18 {
+    font-size: 18px;
+}
 .t_up{
     text-transform: uppercase;
 }
@@ -15,6 +18,15 @@
 .t_al-l {
     text-align: left;
 }
+.show {
+    display: block !important;
+}
+.d-none {
+    display: none;
+}
+.d-in-block {
+    display: inline-block;
+}
 .d-flex {
     display: flex;
 }
@@ -23,6 +35,9 @@
 }
 .justify_around {
     justify-content: space-around;
+}
+.cur {
+    cursor: pointer;
 }
 /* 
     Corpo Pagina
@@ -38,21 +53,32 @@ main {
     width: 80%;
     margin: auto;
 }
-main h1 {
-    padding-top: 30px;
-}
+/* Titoli e Testi */
 h1 {
     color: #fff;
     text-shadow: 3px 3px 5px #000000;
     font-size: 28px;
+    padding-top: 30px;
 }
-
-#ticket_display {
-    height: 275px;
-    display: flex;
-    align-items: center;
+#container_ticket > h3 {
+    text-shadow: 2px 2px 3px #393939;
 }
-
+#container_ticket > h2 {
+    padding-right: 60%;
+}
+/* Messaggio Caricamento */
+.fa-spinner {
+    padding: 0 5px;
+    animation: change-color 2s linear 0s infinite;
+}
+/* Contenitori  */
+label[for="nome"],
+label[for="eta"],
+label[for="distanza"] {
+    font-weight: bold;
+    padding-bottom: 30px;
+    text-shadow: 1px 2px 2px #585858;
+}
 #ticket_display,
 #calc_ticket {
     border: 2px solid #000;
@@ -63,27 +89,6 @@ h1 {
     background-color: #ffffff98;
     box-shadow: 4px 5px 8px #363636;
 }
-
-label[for="nome passeggero"],
-label[for="fascia eta"],
-label[for="distanza p"] {
-    display: block;
-    text-align: center;
-    font-weight: bold;
-    padding-bottom: 30px;
-    font-size: 18px;
-}
-
-
-.btn {
-    margin: 70px 10px 50px;
-    padding: 5px 20px;
-    border-radius: 10px;
-    font-size: 18px;
-    box-shadow: 4px 3px 8px #24080f;
-
-}
-
 input,
 select {
     width: 220px;
@@ -92,8 +97,25 @@ select {
     border: 2px solid;
     box-shadow: 4px 3px 8px #24080f;
 }
-label {
-    text-shadow: 1px 2px 2px #585858;
+/* Biglietto Treno */
+#ticket_display {
+    height: 275px;
+    align-items: center;
+}
+#container_ticket {
+    padding: 0 30px;
+    width: 100%;
+}
+#passenger_name-data {
+    padding: 30px 0 0;
+    width: 25%;
+    background-color: #151515;
+    color: #fff;
+}
+#nameP,
+ul li p {
+    padding-top: 80px;
+    margin-bottom: -100px;
 }
 ul {
     width: 80%;
@@ -102,47 +124,34 @@ ul {
 }
 ul li {
     list-style-type: none;
-    text-align: left;
     padding: 30px 15px 142px 20px;
 }
-#nameP,
-ul li p {
-    padding-top: 80px;
-    margin-bottom: -100px;
-}
-
-#passenger_name-data {
-
-    padding: 30px 0 0;
-    width: 25%;
-    background-color: rgb(21, 21, 21);
-    color: white;
-}
-
-#container_ticket {
-    padding: 0 30px;
-    width: 100%;
-}
-
-
-h4 {
+/* Bottoni */
+.btn {
+    margin: 70px 10px 50px;
+    padding: 5px 20px;
+    border-radius: 10px;
     font-size: 18px;
+    box-shadow: 4px 3px 8px #24080f;
 }
-
-
-#ticket_generator {
-    display: none;
+/* 
+    Hover e Animazioni 
+*/
+.btn:hover,
+input:hover,
+select:hover {
+    opacity: 0.6;
 }
-#container_ticket > h3 {
-    text-shadow: 2px 2px 3px #393939;
-    display: inline-block;
+@keyframes change-color {
+    from {
+        color:rgb(0, 255, 89);
+        transform: rotate(0deg)
+    }
+    50% {
+        color: red;
+    }
+    100% {
+        transform: rotate(360deg);
+        color: rgb(26, 0, 128);
+    }
 }
-#container_ticket > h2 {
-    text-align:left;
-    padding-right: 60%;
-    display: inline-block;
-}
-.show {
-    display: block!important;
-}
-
